name: explicit
version: 0.1.0
synopsis: Experimental API of explicit typeclasses
category: Control
homepage: https://github.com/nikita-volkov/explicit
bug-reports: https://github.com/nikita-volkov/explicit/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2015, Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/explicit.git

library
  hs-source-dirs: library
  default-extensions: ApplicativeDo, Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLabels, OverloadedLists, OverloadedStrings, PartialTypeSignatures, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    Explicit.Operations
    Explicit.Classes.Functor
    Explicit.Classes.Point
    Explicit.Classes.Ap
    Explicit.Classes.Applicative
    Explicit.Classes.Alt
    Explicit.Classes.Alternative
    Explicit.Classes.Empty
    Explicit.Classes.Monad
    Explicit.Classes.Semigroup
    Explicit.Instances.IO
    Explicit.Instances.Maybe
  other-modules:
    Explicit.Prelude
    Explicit.Operations.IO
  build-depends:
    base >=4.11 && <5
