name: explicit
version: 0.1
synopsis: Experimental API of explicit typeclasses
category: Control
homepage: https://github.com/nikita-volkov/explicit
bug-reports: https://github.com/nikita-volkov/explicit/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2015, Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/explicit.git

library
  hs-source-dirs: library
  default-extensions: ApplicativeDo, Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLabels, OverloadedLists, OverloadedStrings, PartialTypeSignatures, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    Explicit.Classes.Accessors.Alt
    Explicit.Classes.Accessors.Alternative
    Explicit.Classes.Accessors.Applicative
    Explicit.Classes.Accessors.Apply
    Explicit.Classes.Accessors.Bind
    Explicit.Classes.Accessors.Extend
    Explicit.Classes.Accessors.Functor
    Explicit.Classes.Accessors.Monad
    Explicit.Classes.Accessors.Pointed
    Explicit.Classes.Accessors.Profunctor
    Explicit.Classes.Accessors.Semigroup
    Explicit.Classes.Constructors.Alternative
    Explicit.Classes.Constructors.Applicative
    Explicit.Classes.Constructors.Apply
    Explicit.Classes.Constructors.Bind
    Explicit.Classes.Constructors.Extend
    Explicit.Classes.Constructors.Functor
    Explicit.Classes.Constructors.Semigroup
    Explicit.Classes.Constructors.Strong
    Explicit.Classes.Types
    Explicit.Instances.IO
  other-modules:
    Explicit.Prelude
    Explicit.Operations.IO
  build-depends:
    base >=4.11 && <5
